Replace dotnet tool installation with NuGet package installation for WiX Toolset

--- a/.github/workflows/windows-msi.yml
+++ b/.github/workflows/windows-msi.yml
@@ -34,7 +34,7 @@ jobs:
         $installed = dotnet tool list -g | Select-String -Pattern "Wixtoolset.Toolset"
         if (-not $installed) {
           Write-Host "Wixtoolset.Toolset not found, installing..."
-          dotnet tool install --global Wixtoolset.Toolset --version q --add-source https://api.nuget.org/v3/index.json
+          nuget install WixToolset.Sdk
         } else {
           Write-Host "Wixtoolset.Toolset already installed"
         }
