--- a/.github/workflows/windows-msi.yml
+++ b/.github/workflows/windows-msi.yml
@@ -27,8 +27,10 @@ jobs:
       run: |
         dotnet publish src/WinCopyS3/WinCopyS3.vbproj -c Release -r win-x64 --self-contained false -o publish
 
+
     - name: Install WiX Toolset (NuGet package-based build)
       shell: pwsh
+      working-directory: installer
       run: |
         # Check if the tool is already installed globally
         $installed = dotnet tool list -g | Select-String -Pattern "Wixtoolset.Toolset"
@@ -38,16 +40,9 @@ jobs:
         } else {
           Write-Host "Wixtoolset.Toolset already installed"
         }
-        # Ensure the local dotnet tools path is available in PATH for the current step
-        $dotnetTools = Join-Path $env:USERPROFILE ".dotnet\tools"
-        $env:PATH = "$dotnetTools;$env:PATH"
-        # Verify the tool is available
-        if (Get-Command wixtoolset -ErrorAction SilentlyContinue) {
-          wixtoolset --version
-        } else {
-          Write-Error "WiX toolset not found on PATH after installation"
-          exit 1
-        }
+        
+        # Restore the WiX project to ensure all dependencies are available
+        dotnet restore .\WinCopyS3.wixproj
 
     - name: Build MSI
       working-directory: installer
